[package]
name = "two-tree-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
congee = { git = "https://github.com/XiangpengHao/congee.git", features = [
	"db_extension",
], branch = "alloc" }
crossbeam-epoch = "0.9.11"
jasmine-db = { git = "https://github.com/XiangpengHao/jasmine.git" }
douhua = { git = "https://github.com/XiangpengHao/douhua.git", features = [
	"numa",
], branch = "numa" }
btree-olc = { path = "../btree-olc" }
metric = { path = "../btree-olc/metric" }
dashmap = "5.4.0"
fxhash = "0.2.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
selfsimilar = "0.1.0"
zipf = "7.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
shumai = "0.2.12"

[dev-dependencies]
mimalloc = { version = "*", default-features = false }

[features]
mock_numa = ["douhua/mock_numa"]
metrics = ["btree-olc/metrics"]
add_delay = ["btree-olc/add_delay"]


[[bench]]
name = "db"
path = "bench/db.rs"
harness = false

[[bench]]
name = "tatp"
path = "bench/tatp.rs"
harness = false
