[package]
name = "btree-olc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
congee = { version = "0.2.18", features = ["db_extension"] }
crossbeam-epoch = "0.9.15"
jasmine-db = { git = "https://github.com/XiangpengHao/jasmine.git"}
libc = "0.2.148"
once_cell = "1.18.0"
rand = "0.8.5"
douhua = { git = "https://github.com/XiangpengHao/douhua.git", features = ["numa"], branch = "numa" }
serde = { version = "1.0.188", features = ["derive"] }
shuttle = { version = "0.6.0", optional = true }
metric = { path = "metric" }
io-uring = "0.5"
dashmap = "5.5.3"
fxhash = "0.2.1"

[dev-dependencies]
rand = "0.8.5"


[features]
shuttle = ["dep:shuttle"]
mock_numa = ["douhua/mock_numa"]
metrics = []
add_delay = ["douhua/add_delay"]

[workspace]
members = [
	".",
	"metric",
]

